hard-gists/396e85fe4facca626782/run.log
=== Docker Run Log for 396e85fe4facca626782 ===
Started at: Mi 29. Okt 14:07:01 CET 2025

[2025-10-29 14:07:02] START: Running container for 396e85fe4facca626782
[2025-10-29 14:07:02] SUCCESS: Container a5949ca32fc7d47f9602a05e4c209eb49cfbb6e6982f435d5960fe9e287c1caf started for 396e85fe4facca626782
=== Container logs for 396e85fe4facca626782 ===
  File "/snippet.py", line 90
    print "Hostname: %s" % (url.hostname)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 396e85fe4facca626782 ===
[2025-10-29 14:07:04] INFO: Container a5949ca32fc7d47f9602a05e4c209eb49cfbb6e6982f435d5960fe9e287c1caf has stopped
